--- a/TableCipher/TableCipher.project
+++ b/TableCipher/TableCipher.project
@@ -99,4 +99,6 @@
     <File Name="TableCipher.cpp"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
