--- a/modAlphaCipher/modan.project
+++ b/modAlphaCipher/modan.project
@@ -97,4 +97,6 @@
     <File Name="modAlphaCipher.h"/>
     <File Name="main.cpp"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
